# zboy

firmware/: .gitignore  compile_commands.json
firmware/scripts/: build.sh  flash.sh
firmware/zboy/: CMakeLists.txt  Kconfig  prj.conf
firmware/zboy/boards/u575xx/: mem.overlay
firmware/zboy/lib/: Kconfig
firmware/zboy/lib/include/: console.h  mem_defs.h
firmware/zboy/linker/u575xxx/: game_mem.ld
firmware/zboy/src/: main.c
